# distillation-exps

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ddist/: __init__.py  candgen.py  candgenv1.py  dispatch.py  utils.py
ddist/data/: __init__.py  dataset.py  datasource.py  preprocessors.py
ddist/models/: __init__.py  densenet_cifar.py  resnet_cifar.py
ddistexps/: analysys_helpers.py  teachers.py  utils.py
ddistexps/baseline/: .env  main.py  requirements.yaml  trainer.py
ddistexps/baseline/expcfg/: __init__.py  cifar10.py  cifar100.py  debug.py  tinyimagenet.py
ddistexps/benchmarks/: main.py
ddistexps/benchmarks/expcfg/: __init__.py  cifar10.py  debug.py
ddistexps/composition/: README.md  gen_forwards.py  main.py  trainer.py
ddistexps/composition/expcfg/: __init__.py  cifar10.py  debug.py
ddistexps/distillation/: README.md  main.py  teachers.py  trainer.py
ddistexps/distillation/expcfg/: __init__.py  cifar10.py  debug.py
ddistexps/ftdistil/: dataflow.py  main.py  teachers.py  trainer.py
ddistexps/ftdistil/expcfg/: __init__.py  cifar10.py  debug.py
doubledistill/ddist/: __init__.py  dispatch.py  utils.py
doubledistill/ddist/data/: __init__.py  dataset.py  preprocessors.py
doubledistill/ddistexps/: analysys_helpers.py  teachers.py  utils.py
notebooks/: get_adaptation_cost.ipynb
scripts/: add_flops_to_artifact.py  add_flops_to_trainable.py  add_profile_to_runs.py  del_incorrect_outshape.py  del_runs_without_artifacts.py  delete_runs.py  logfilter.py  migrate_runs.py  rename_runs.py  run_baseline.sh  startrayhead.sh
(+35 files in other folders)
