[tool.poetry]
name = "doubledistill"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
rich = "^13.7.0"
grpcio = "^1.60.0"


[tool.poetry.group.dev.dependencies]
ray = "^2.8.1"
mlflow = "^2.9.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
